# uno-rev3-avr-c

./: CMakeLists.txt  main.c
Uno_rev3_bsp/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart
Uno_rev3_bsp/config/: clock_config.h
Uno_rev3_bsp/gcc/: Makefile
Uno_rev3_bsp/iar/: Makefile
Uno_rev3_bsp/include/: atmel_start_pins.h  driver_init.h  port.h  system.h
Uno_rev3_bsp/src/: driver_init.c  i2c_master.c  usart_basic.c
Uno_rev3_bsp/xc8/: Makefile
inc/: my_printf.h
src/: my_printf.c
